--- a/app/src/main/res/layout/activity_issuance.xml
+++ b/app/src/main/res/layout/activity_issuance.xml
@@ -19,6 +19,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/line_colo10"
         android:animateLayoutChanges="true">
 
         <LinearLayout
@@ -57,42 +58,46 @@
 
         </LinearLayout>
 
-        <TextView
-            style="@style/TextView.InterRegular_12ssp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/_5sdp"
-            android:layout_marginHorizontal="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:paddingHorizontal="@dimen/_10sdp"
-            android:foreground="?selectableItemBackground"
-            android:gravity="center"
-            android:onClick="@{v->vm.onClick(v)}"
-            android:text="Showing result for ->"
-            android:textColor="@color/fsm_text_color"
-            android:textSize="@dimen/_12sdp"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/trans"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll1" />
+            app:layout_constraintTop_toBottomOf="@+id/ll1">
 
-        <TextView
-            android:id="@+id/tvMonth"
-            style="@style/TextView.InterRegular_12ssp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/_5sdp"
-            android:layout_marginHorizontal="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:background="@drawable/edit_back_view"
-            android:backgroundTint="@color/line_color"
-            android:paddingHorizontal="@dimen/_10sdp"
-            android:foreground="?selectableItemBackground"
-            android:gravity="center"
-            android:onClick="@{v->vm.onClick(v)}"
-            android:text="August 2024"
-            android:textColor="@color/fsm_bg_light_teal"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll1" />
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:background="@color/trans"
+                android:elevation="0dp"
+                android:outlineSpotShadowColor="@color/trans">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tab_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:elevation="0dp"
+                    app:tabGravity="center"
+                    app:tabIndicatorColor="@color/line_color"
+                    app:tabIndicatorHeight="@dimen/_2sdp"
+                    app:tabMode="fixed"
+                    app:tabTextAppearance="@style/tab2" />
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:overScrollMode="never"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
