--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
             android:layout_height="@dimen/_100sdp"
             android:layout_marginTop="@dimen/_30sdp"
             android:background="@color/white"
+            android:visibility="gone"
             android:src="@drawable/fsm_logo"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +47,7 @@
             android:id="@+id/bgView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/_160sdp"
+            android:layout_marginTop="@dimen/_120sdp"
             android:background="@drawable/top_cornered_shape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
