--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,6 +32,21 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="TextView.Phone" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_height">@dimen/_40sdp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:paddingStart">@dimen/_10sdp</item>
+        <item name="android:paddingEnd">@dimen/_10sdp</item>
+        <item name="android:lines">1</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textColorHint">@color/fsm_text_color60</item>
+        <item name="android:textColor">@color/fsm_text_color</item>
+        <item name="android:fontFamily">@font/inter_regular</item>
+        <item name="android:background">@drawable/edit_back_view</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
     <style name="TextView.PoppinsMedium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -69,6 +84,9 @@
         <item name="cornerSizeBottomRight">50%</item>
     </style>
 
+    <style name="spinnerStyle"  parent="@android:style/Widget.TextView.SpinnerItem">
+        <item name="android:padding">@dimen/_5sdp</item>
+    </style>
 
     <style name="ShapeAppearanceOverlay.App.SelectedCornerRadius" parent="">
         <item name="cornerFamilyTopRight">rounded</item>
