--- a/app/src/main/res/layout/activity_reset_pasword.xml
+++ b/app/src/main/res/layout/activity_reset_pasword.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:gravity="center_vertical"
-                android:text="Reset Password"
+                android:text="Forgot Password"
                 android:textColor="@color/fsm_bg_light_teal"
                 android:textSize="@dimen/_16sdp" />
 
@@ -75,7 +75,7 @@
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_25ssp"
             android:layout_marginEnd="@dimen/_16sdp"
-            android:text="Old Password*"
+            android:text="Email*"
             android:textColor="@color/fsm_text_color"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,76 +83,19 @@
             app:layout_constraintTop_toTopOf="@+id/bgView" />
 
         <EditText
-            android:id="@+id/etvOldPassword"
+            android:id="@+id/etvEmail"
             style="@style/EditText.Phone"
             android:layout_width="0dp"
             android:layout_marginTop="8dp"
-            android:hint="Enter Old Password"
+            android:hint="Enter email address"
             android:imeOptions="actionDone"
-            android:inputType="phone"
-            android:maxLength="10"
+            android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@id/tvOldPass"
             app:layout_constraintStart_toStartOf="@id/tvOldPass"
             app:layout_constraintTop_toBottomOf="@+id/tvOldPass" />
 
         <TextView
-            android:id="@+id/tvNewPass"
-            style="@style/TextView.InterRegular_12ssp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_25ssp"
-            android:layout_marginEnd="@dimen/_16sdp"
-            android:text="New Password*"
-            android:textColor="@color/fsm_text_color"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etvOldPassword" />
-
-        <EditText
-            android:id="@+id/etNewPassword"
-            style="@style/EditText.Phone"
-            android:layout_width="0dp"
-            android:layout_marginTop="8dp"
-            android:hint="Enter New Password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:maxLength="10"
-            app:layout_constraintEnd_toEndOf="@id/tvNewPass"
-            app:layout_constraintStart_toStartOf="@id/tvNewPass"
-            app:layout_constraintTop_toBottomOf="@+id/tvNewPass" />
-
-        <TextView
-            android:id="@+id/tvConfirmPass"
-            style="@style/TextView.InterRegular_12ssp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_25ssp"
-            android:layout_marginEnd="@dimen/_16sdp"
-            android:text="Confirm New Password*"
-            android:textColor="@color/fsm_text_color"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />
-
-        <EditText
-            android:id="@+id/etConfirmPassword"
-            style="@style/EditText.Phone"
-            android:layout_width="0dp"
-            android:layout_marginTop="8dp"
-            android:hint="Enter Confirm Password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:maxLength="10"
-            app:layout_constraintEnd_toEndOf="@id/tvConfirmPass"
-            app:layout_constraintStart_toStartOf="@id/tvConfirmPass"
-            app:layout_constraintTop_toBottomOf="@+id/tvConfirmPass" />
-
-        <TextView
-            android:id="@+id/tvSave"
+            android:id="@+id/tvContinue"
             style="@style/TextView.InterRegular_12ssp"
             android:layout_width="0dp"
             android:layout_height="@dimen/_40sdp"
@@ -164,12 +107,12 @@
             android:foreground="?selectableItemBackground"
             android:gravity="center"
             android:onClick="@{v->vm.onClick(v)}"
-            android:text="Reset"
+            android:text="Continue"
             android:textColor="@color/fsm_bg_light_teal"
             android:textSize="@dimen/_16sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/etvEmail" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
