--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="calendarTitlePaddingBottom">8dp</dimen>
     <dimen name="weekTitlePaddingTop">8dp</dimen>
     <dimen name="weekTitlePaddingBottom">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
